# Mental-health-Chatbot

./: .gitignore  pyproject.toml  requirements.txt
frontend-app/: angular.json  package-lock.json  package.json
ml/datasets/: conversation_stream.py  sentiment_stream.py  unified_stream.py
ml/scripts/: preprocess_stream.py  stream_pipeline.py
ml/utils/: config.py
