[project]
name = "mental-health-chatbot"
version = "0.1.0"
description = "A mental health chatbot using Phi for fine-tuning with FastAPI backend"
authors = [
    {name = "Kuda Murungweni", email = "kudakwashemurungweni50@gmail.com"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.8.1",
    "aiohttp>=3.12.13",
    "datasets>=3.6.0",
    "huggingface-hub>=0.33.2",
    "kaggle>=1.7.4.5",
    "mlflow>=3.1.2",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "transformers>=4.53.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "notebook>=7.4.4",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
